soft delete company
